<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_discover"
        android:icon="@drawable/discover_selector"
        android:title="@string/title_discover" />

    <item
        android:id="@+id/navigation_dining"
        android:icon="@drawable/dining_selector"
        android:title="@string/title_dining" />

<!--    <item-->
<!--        android:id="@+id/navigation_chat"-->
<!--        android:title=""-->
<!--        android:enabled="false" />-->

    <item
        android:id="@+id/navigation_chat"
        android:title="@string/title_chat"
        android:icon="@drawable/chat_selector" />

    <item
        android:id="@+id/navigation_aviation"
        android:icon="@drawable/aviation_selector"
        android:title="@string/title_aviation" />

    <item
        android:id="@+id/navigation_my_bookings"
        android:icon="@drawable/my_bookings_selector"
        android:title="@string/title_my_bookings" />

</menu>